[project]
name = "reportlab-toolz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kirill", email = "2spybot@gmail.com" }
]
requires-python = ">=3.11.4"
dependencies = [
    "reportlab>=4.2.5",
]

[project.scripts]
reportlab-toolz = "reportlab_toolz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
